--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,23 +2,23 @@
   <%= f.text_field :name %> <br /><br />
   <%= f.fields_for :addresses do |addr| %>
 
-    <%= addr.label :street_address_1 %>
-    <%= addr.text_field :street_address_1 %>
+    <%= addr.label :street_address_1 %><br>
+    <%= addr.text_field :street_address_1 %><br>
 
-    <%= addr.label :street_address_2 %>
-    <%= addr.text_field :street_address_2 %>
+    <%= addr.label :street_address_2 %><br>
+    <%= addr.text_field :street_address_2 %><br>
 
-    <%= addr.label :city %>
-    <%= addr.text_field :city %>
+    <%= addr.label :city %><br>
+    <%= addr.text_field :city %><br>
 
-    <%= addr.label :state %>
-    <%= addr.text_field :state %>
+    <%= addr.label :state %><br>
+    <%= addr.text_field :state %><br>
 
-    <%= addr.label :zipcode %>
-    <%= addr.text_field :zipcode %>
+    <%= addr.label :zipcode %><br>
+    <%= addr.text_field :zipcode %><br>
 
-    <%= addr.label :address_type %>
-    <%= addr.text_field :address_type %>
+    <%= addr.label :address_type %><br>
+    <%= addr.text_field :address_type %><br>
 
     <% end %>
 
